--- a/app/src/main/res/layout/fragment_mediafile_section.xml
+++ b/app/src/main/res/layout/fragment_mediafile_section.xml
@@ -5,13 +5,8 @@
               >
 
     <TextView
-        android:id="@+id/name"
+        android:id="@+id/section_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
-    <ImageView
-            android:id="@+id/content"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:textAppearance="?attr/textAppearanceListItem"/>
 </FrameLayout>
