--- a/app/src/main/res/layout/fragment_mediafile_content.xml
+++ b/app/src/main/res/layout/fragment_mediafile_content.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="90dp"
-              >
+    android:layout_width="match_parent"
+    android:layout_height="90dp">
 
     <TextView
         android:id="@+id/name"
@@ -10,8 +9,8 @@
         android:layout_height="wrap_content" />
 
     <ImageView
-            android:id="@+id/content"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:textAppearance="?attr/textAppearanceListItem"/>
+        android:id="@+id/content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:textAppearance="?attr/textAppearanceListItem" />
 </FrameLayout>
